# Ligo

./: README.md  clean_pycache.bat  scratchpad.md
_docs/: design_philosophy.md
_hub/: archive_master_prompt_v1.1.md  audit_2026_07.md  current_task.md  master_prompt_ligo_2.0.md
_projects/: README.md  _config.py  pyproject.toml  test_publish_check.py
_projects/_system/sessions/: default.json
_projects/_utils/: __init__.py  time_greeting_helper.py
_projects/audit/: technical_audit_report.md
_projects/cli/: ligo_cli.py
_projects/contracts/: __init__.py  ai_params_protocol.py  greeting_protocol.py  weather_protocol.py
_projects/modules/: __init__.py  ai_params.py  english_greeting.py  polish_greeting.py  weather.py
_projects/orchestrator/: __init__.py  main.py
_projects/registry/: __init__.py  import_checker.py  log_handler.py  module_generator.py  project_analyzer.py  self_verify.py  service_registry.py  stability_score.py
_projects/snapshots/: 001_initial.md  LIGO_REGISTRY_SNAPSHOT_default.json  LIGO_SNAPSHOT_TEMPLATE.md
_projects/tests/: __init__.py  test_meta_cycling.py  test_mvg.py  test_self_verify.py  test_service_registry.py  test_time_greeting_helper.py
_system/: __init__.py  project_anchor.md  tech_stack.md
_system/utils/: __init__.py  call_depth_guard.py  call_tracer.py  context_manager.py  dependency_graph.py  ligo_architecture_validator.py  ligo_meta_cycling.py  project_manager.py  session_manager.py
